wrote tests for the service level